[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry]
name = "advent-of-code-py"
version = "0.2.0"
description = "Advent of Code helper CLI and library"
authors = [ "Saurav Sharma <appdroiddeveloper@gmail.com>" ]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/iamsauravsharma/advent-of-code-py"
repository = "https://github.com/iamsauravsharma/advent-of-code-py"
documentation = "https://iamsauravsharma.github.io/advent-of-code-py"
keywords = [ "advent-of-code", "aoc", "aocpy", "advent of code" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Libraries"]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "^1.4.4"
click = "^8.0"
python-dateutil = "^2.8.0"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.8.4"
isort = "^5.5.4"
safety = "^1.9.0"
portray = "^1.5.0"
nox-poetry = "^0.8.5"
pytest = "^6.2.4"

[tool.poetry.scripts]
advent-of-code-py = "advent_of_code_py.cli:main"

[tool.portray]
modules = [ "advent_of_code_py" ]

[tool.portray.mkdocs.theme]
name = "material"
palette = { primary = "black", accent = "indigo" }
