[tool.poetry]
name = "advent-of-code-py"
version = "0.4.0"
description = "Advent of Code helper CLI and library"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/iamsauravsharma/advent-of-code-py"
repository = "https://github.com/iamsauravsharma/advent-of-code-py"
keywords = ["advent-of-code", "aoc", "aocpy", "advent of code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0"
requests = "^2.22.0"
pytz = "^2024.1"
platformdirs = "^4.0.0"

[tool.poetry.group.dev.dependencies]
nox-poetry = "^1.0.0"
pytest = "^8.0.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
advent-of-code-py = "advent_of_code_py.cli:main"

[tool.ruff.lint]
select = ["I"]
