[project]
name = "advent-of-code-py"
version = "0.4.0"
description = "Advent of Code helper CLI and library"
authors = [{ name = "Saurav Sharma", email = "appdroiddeveloper@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["advent-of-code", "aoc", "aocpy", "advent of code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.0,<9",
    "platformdirs>=4,<5",
    "pytz>=2024.1",
    "requests>2.22.0,<3",
]

[project.urls]
homepage = "https://github.com/iamsauravsharma/advent-of-code-py"
source = "https://github.com/iamsauravsharma/advent-of-code-py"

[project.scripts]
advent-of-code-py = "advent_of_code_py.cli:main"

[dependency-groups]
dev = ["nox>=2024.10.9", "pytest>=8", "ruff>=0.8.3"]

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
